project_folder/public/css/styles.css
/* ... */
.food-grid {
    max-width: 1100px;
    margin: 0 auto 40px auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 25px;
}

.food-card {
    width: 250px;
    background-color: white;
    border-radius: 12px;
    overflow: hidden;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
    border-top:8px solid #ef9656;
    
}
.food-card:hover{
transform: translateY(-6px);
box-shadow:0 10px 18px rgba(0,0,0,0.15);
}
.food-img{
width:100%;
height:170px;
object-fit:cover;
border-radius:10px 10px 0 0;
}

.food-card-text {
    padding: 18px;
}

.food-card-text h3 {
    margin-bottom: 10px;
    color: #2d6a4f;
}

.extra-food-info{
background:#d7e9e1;
padding:30px 20px;
max-width:1100px;
margin:40px auto;
border-radius:12px;
}


.extra-food-info h2 {
    text-align: center;
    margin-bottom: 25px;
    color: #0b0f0d;
}

.explore-boxes {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: center;
}

.explore-box {
    width: 240px;
    background-color: white;
    padding: 20px;
    border-radius: 12px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
    text-align: center;
}

.explore-box:hover{
transform: translateY(-6px);
box-shadow:0 10px 18px rgba(0,0,0,0.15);
}
.explore-box h3 {
    margin-bottom: 10px;
    color: #2d6a4f;
}


/*END FOOD SECTION*/



/* destinations CSS*/

#destinations-page .navbar{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1px 25px;
    background-color: white;
    border-bottom: #f5893b 7px solid;
    /*background: linear-gradient( #f5893b,  #fda218, #f7d352);*/
    /*background: linear-gradient(to right,#dffcff, #4cd2fd, #1eaafa , #00497c);*/
}

#destinations-page nav.nav-links {
    background: transparent;
}

#destinations-page .nav-links li a.n:hover {
  color: #f5893b;
}


#destinations-page .nav-links ul {
    background-color: transparent;
    display: flex;
    list-style: none;
    gap: 15px;
    padding: 0;
}

#destinations-page a.n{
    text-decoration: none;
    color: #030304;
    background-color: transparent;
}

#destinations-page a.n:hover{
    background: transparent;
    color: #1f2439;
}

#destinations-page .logo {
    display: flex;
    font-family: 'Dancing Script', cursive;
    font: 40px;
    font-weight: bold;
    color: #030304;
    background-color: transparent;
    font-size: clamp(1rem, 5vw, 3rem);
}
/* hero banner content*/

#destinations-page .destinations-hero {
    background: url('../images/hero-destinations.jpg'); 
    background-size: cover;
    background-position: center;
    height: 400px;                
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    color: white;
    text-align: center;
    overflow: hidden;
}

#destinations-page .destinations-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.4);
    z-index: 1;
}

#destinations-page .hero-content {
    position: relative;
    z-index: 2;
    padding: 20px;
    font-family: 'Montserrat', sans-serif;
}

/* general spacing content*/

#destinations-page {
  margin: 0;
  overflow-x: hidden;
  background-color: #f5f5f5;
}

#destinations-page * {
  box-sizing: border-box;
}

/* section content*/

#whistler-id {
    scroll-margin-top: 340px;
}

#vancouver-id {
    scroll-margin-top: 340px;
}

#tofino-id {
    scroll-margin-top: 340px;
}

#victoria-id {
    scroll-margin-top: 340px;
}

#revelstoke-id {
    scroll-margin-top: 340px;
}

#kelowna-id {
    scroll-margin-top: 340px;
}

#destinations-page .gallery {
  display: flex;
  gap: 5px;
  flex-wrap: wrap;
  justify-content: center;
}

#destinations-page .gallery img {
  width: 32%;
  height: 250px;
  object-fit: cover;
  border-radius: 10px;
}

#destinations-page section {
    display: flex;
    flex-direction: column;
    gap: 15px;
    font-family: 'Montserrat', sans-serif;
    max-width: 1000px;
    margin: 30px auto;
    padding: 20px;
    background-color: white;
    border-radius: 12px;
    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
    border-top: 8px solid #ef9656;
}

#destinations-page section h2 {
  margin: 0;
  color: #2e6b3d;
  font-family: 'Montserrat', sans-serif;
}

/* footer content*/

#destinations-page .footer {
    text-align: center;
    font-family: 'Montserrat', sans-serif;
    padding: 18px;
    color: white;
    background-color: #2d6a4f;
    margin-top: 50px;
    border-top: 7px solid #f5893b;
}

@media screen and (width >= 768px) {

  #destinations-page .destinations-navbar {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  #destinations-page .nav-links {
    margin-top: 0; 
  }

  #destinations-page .content-row {
    display: flex;
    justify-content: center;
    gap: 0px;
  }

  #destinations-page .content-row p {
    font-family: 'Montserrat', sans-serif;
    flex: 0.5;                  
    margin: 0;
    padding-right: 30px;
  }

  #whistler-id {
    scroll-margin-top: 100px;
  }

  #vancouver-id {
    scroll-margin-top: 100px;
  }

  #tofino-id {
    scroll-margin-top: 100px;
  }

  #victoria-id {
    scroll-margin-top: 100px;
  }

  #revelstoke-id {
    scroll-margin-top: 100px;
  }

  #kelowna-id {
    scroll-margin-top: 100px;
  }

  #destinations-page .gallery {
    flex: 1.5;
    justify-content: flex-start;
  }

  #destinations-page .gallery img {
    width: 30%;
  }

  a.totem{
    position: fixed;
    bottom: -35px;
    right: -50px;
    z-index: 20;
  }

}

